--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "app-template",
-  "main": "expo-router/entry",
+  "type": "module",
   "version": "1.0.0",
+  "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -39,11 +41,14 @@
     "react-native-webview": "13.13.5"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.13.2",
     "@babel/core": "^7.25.2",
+    "@eslint-react/eslint-plugin": "^1.49.0",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
-  },
-  "private": true
+    "eslint-config-expo": "~9.2.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "typescript": "~5.8.3"
+  }
 }
