--- a/package.json
+++ b/package.json
@@ -14,41 +14,47 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.9",
-    "expo-blur": "~14.1.4",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/elements": "^2.5.2",
+    "@react-navigation/native": "^7.1.14",
+    "expo": "^53.0.13",
+    "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.6",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "~5.1.1",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
-    "expo-web-browser": "~14.1.6",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native": "0.79.4",
+    "react-native-gesture-handler": "~2.26.0",
+    "react-native-reanimated": "~3.18.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "taze": "^19.1.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.2",
-    "@babel/core": "^7.25.2",
-    "@eslint-react/eslint-plugin": "^1.49.0",
-    "@types/react": "~19.0.10",
-    "eslint": "^9.25.0",
+    "@antfu/eslint-config": "^4.16.1",
+    "@babel/core": "^7.27.7",
+    "@eslint-react/eslint-plugin": "^1.52.2",
+    "@types/react": "~19.1.8",
+    "eslint": "^9.30.0",
     "eslint-config-expo": "~9.2.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^6.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "typescript": "~5.8.3"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "unrs-resolver"
+    ]
   }
 }
