--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
+    "@tanstack/react-query": "^5.81.5",
     "expo": "^53.0.13",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -40,7 +41,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "taze": "^19.1.0"
+    "taze": "^19.1.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.1",
