--- a/package.json
+++ b/package.json
@@ -13,42 +13,52 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@ant-design/icons-react-native": "^2.3.2",
+    "@ant-design/react-native": "^5.4.2",
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.14",
     "@tanstack/react-query": "^5.81.5",
-    "expo": "^53.0.13",
+    "babel-plugin-import": "^1.13.8",
+    "expo": "^53.0.17",
     "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
-    "expo-font": "~13.3.1",
+    "expo-constants": "~17.1.7",
+    "expo-device": "^7.1.4",
+    "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.1",
-    "expo-splash-screen": "~0.30.9",
+    "expo-image": "~2.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.3",
+    "expo-secure-store": "^14.2.3",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.10",
     "expo-web-browser": "~14.2.0",
     "nativewind": "^4.1.23",
+    "rc-field-form": "^2.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "~2.26.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-query-external-sync": "^2.2.3",
+    "socket.io-client": "^4.8.1",
     "taze": "^19.1.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.67",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.1",
     "@babel/core": "^7.27.7",
     "@eslint-react/eslint-plugin": "^1.52.2",
-    "@types/react": "~19.1.8",
+    "@types/react": "~19.0.14",
     "eslint": "^9.30.0",
     "eslint-config-expo": "~9.2.0",
     "eslint-plugin-react-hooks": "^6.0.0",
