--- a/package.json
+++ b/package.json
@@ -14,36 +14,36 @@
   },
   "dependencies": {
     "@ant-design/icons-react-native": "^2.3.2",
-    "@ant-design/react-native": "^5.4.2",
+    "@ant-design/react-native": "^5.4.3",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/cli": "^18.0.0",
-    "@react-navigation/bottom-tabs": "^7.4.2",
-    "@react-navigation/elements": "^2.5.2",
-    "@react-navigation/native": "^7.1.14",
-    "@tanstack/react-query": "^5.81.5",
+    "@react-native-community/cli": "^20.0.2",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/elements": "^2.6.4",
+    "@react-navigation/native": "^7.1.17",
+    "@tanstack/react-query": "^5.89.0",
     "babel-plugin-import": "^1.13.8",
-    "expo": "^53.0.18",
+    "expo": "^53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-device": "^7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.6",
+    "expo-secure-store": "^14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.2.1",
     "rc-field-form": "^2.7.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-mmkv": "^3.3.0",
+    "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -52,26 +52,30 @@
     "react-native-webview": "13.13.5",
     "react-query-external-sync": "^2.2.3",
     "socket.io-client": "^4.8.1",
-    "taze": "^19.1.0",
-    "zod": "^3.25.67",
-    "zustand": "^5.0.6"
+    "taze": "^19.7.0",
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.1",
-    "@babel/core": "^7.27.7",
-    "@eslint-react/eslint-plugin": "^1.52.2",
+    "@antfu/eslint-config": "^5.4.1",
+    "@babel/core": "^7.28.4",
+    "@eslint-react/eslint-plugin": "^1.53.1",
     "@types/react": "~19.0.14",
-    "eslint": "^9.30.0",
+    "eslint": "^9.36.0",
     "eslint-config-expo": "~9.2.0",
     "eslint-plugin-react-hooks": "^6.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.17",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "tailwindcss": "3.4.17",
     "typescript": "~5.8.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "unrs-resolver"
     ]
-  }
+  },
+  "trustedDependencies": [
+    "core-js",
+    "unrs-resolver"
+  ]
 }
